manifests/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: devpies
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
